# literature_review

./: .gitignore  README.md  analysis_prompt.txt  collect_recent_papers.py  config.toml  example.py  gather_summaries.py  paper_list.txt  project.docx  pyproject.toml  requirements.txt
src/: __init__.py  arxiv_downloader.py  cache.py  claude_analyzer.py  config.py  docx_handler.py  gdoc_handler.py  pdf_processor.py  summary_generator.py
