[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "literature_review"
version = "0.1.0"
description = "A package for analyzing research papers using Claude API"
authors = [
    { name = "Literature Review Team" }
]
requires-python = ">=3.8"
dependencies = [
    "arxiv==1.4.8",
    "anthropic==0.43.1",
    "pypdf==4.0.1",
    "python-docx==1.0.1",
    "markdown==3.5.2",
    "python-dotenv==1.0.1",
    "requests==2.31.0",
    "tomli==2.0.1",
]

[tool.setuptools]
package-dir = {"literature_review" = "src"} 